BPER/DEVF/force-app/main/default/objects/Utenti_Speciali__mdt/Utenti_Speciali__mdt.object-meta.xml
<CustomObject>
    <label>Utenti Speciali</label>
    <pluralLabel>Utenti Speciali</pluralLabel>
</CustomObject>