BPER/DEVF/force-app/main/default/objects/Utenti_Speciali__mdt/fields/ID_Utente__c.field-meta.xml
<CustomField>
    <fullName>ID_Utente__c</fullName>
    <label>ID Utente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>