BPER/DEVF/force-app/main/default/objects/Utenti_Speciali__mdt/fields/Matricola__c.field-meta.xml
<CustomField>
    <fullName>Matricola__c</fullName>
    <label>Matricola</label>
    <length>255</length>
    <type>Text</type>
</CustomField>