BPER/DEVF/force-app/main/default/objects/Utenti_Speciali__mdt/fields/Nominativo__c.field-meta.xml
<CustomField>
    <fullName>Nominativo__c</fullName>
    <label>Nominativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>